<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="rtl"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:id="@+id/week_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:cardBackgroundColor="@color/colorPrimaryNight"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/weeklist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:descendantFocusability="afterDescendants"
            android:orientation="vertical"
            android:background="@drawable/card_background_selector"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp">

            <TextView
                android:id="@+id/subject"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"

                android:layout_marginRight="8dp"
                android:gravity="center_horizontal"
                android:text="@string/subject"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                card_view:layout_constraintEnd_toStartOf="@+id/popupbtn"
                card_view:layout_constraintHorizontal_bias="0.384" />

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/black"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/subject" />

            <TextView
                android:id="@+id/room"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/room"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toEndOf="@+id/roomimage"
                app:layout_constraintTop_toBottomOf="@+id/teacher"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="2dp"
                android:text="@string/time"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/line"
                app:layout_constraintStart_toEndOf="@+id/timeimage"
                app:layout_constraintTop_toBottomOf="@+id/teacher"
                app:layout_constraintVertical_bias="0.0"
                android:layout_marginLeft="8dp"
                android:gravity="center_horizontal" />

            <ImageView
                android:id="@+id/roomimage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/teacherimage"
                app:layout_constraintTop_toTopOf="@+id/room"
                app:layout_constraintVertical_bias="0.263"
                app:srcCompat="@drawable/baseline_room_black_24" />

            <ImageView
                android:id="@+id/timeimage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/time"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/baseline_access_time_black_24"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <TextView
                android:id="@+id/teacher"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/teacher"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/teacherimage"
                app:layout_constraintTop_toBottomOf="@+id/line"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="34dp"
                android:gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="34dp" />

            <ImageButton
                android:id="@+id/deletebtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:background="?selectableItemBackgroundBorderless"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintTop_toTopOf="@+id/subject"
                android:src="@drawable/baseline_delete_forever_24"
                android:layout_marginRight="2dp" />

            <ImageView
                android:id="@+id/teacherimage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/line"
                app:layout_constraintTop_toTopOf="@+id/teacher"
                card_view:srcCompat="@drawable/baseline_person_black_24" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>