<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card"
    android:layoutDirection="rtl"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Media -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:scaleType="centerCrop"
            android:id="@+id/hwimage"
            />


        <FrameLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layoutDirection="ltr"
            android:layout_height="wrap_content" >

            <androidx.cardview.widget.CardView
                android:id="@+id/homeworks_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/card_background_selector"
                    android:descendantFocusability="afterDescendants"
                    android:orientation="vertical"
                    android:paddingBottom="15dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="15dp">

                    <TextView
                        android:id="@+id/subjecthomework"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="34dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/subject"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/addpdfbtn"
                        android:layout_marginLeft="34dp"
                        android:layout_marginRight="8dp"
                        android:gravity="center_horizontal" />

                    <View
                        android:id="@+id/line"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="2dp"
                        android:background="@android:color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/subjecthomework" />

                    <TextView
                        android:id="@+id/datehomework"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="34dp"
                        android:layout_marginBottom="2dp"
                        android:text="@string/date"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/timeimage"
                        app:layout_constraintTop_toBottomOf="@+id/descriptionhomework"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="34dp"
                        android:gravity="center_horizontal" />

                    <ImageView
                        android:id="@+id/timeimage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="2dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/descriptionhomework"
                        app:layout_constraintTop_toBottomOf="@+id/descriptionhomework"
                        app:layout_constraintVertical_bias="0.0"
                        app:srcCompat="@drawable/baseline_access_time_black_24" />

                    <TextView
                        android:id="@+id/descriptionhomework"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/desctiption"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="@+id/line"
                        app:layout_constraintStart_toStartOf="@+id/line"
                        app:layout_constraintTop_toBottomOf="@+id/line"
                        android:gravity="center_horizontal" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.5" />

                    <ImageButton
                        android:id="@+id/addpdfbtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="2dp"
                        android:background="?selectableItemBackgroundBorderless"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/subjecthomework"
                        android:src="@drawable/baseline_add_24"
                        android:layout_marginRight="2dp" />

                    <ImageButton
                        android:id="@+id/deleteHomework"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="340dp"
                        android:layout_marginRight="340dp"
                        android:background="?selectableItemBackgroundBorderless"
                        android:src="@drawable/baseline_delete_forever_24"


                        app:layout_constraintTop_toTopOf="@+id/subjecthomework" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </FrameLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
